# os

exam/Ответы/: Исчерпывающий гид по курсу «Операционные системы и сети».md
exam/Ответы/Базовые сведения об ОС. Процессы и потоки/: Futex и condition variables.md  std mutex и разновидности мьютексов.md  Адресное пространство и аппаратная защита.md  Базовые абстракции ОС. процессы, адресные пространства, файлы.md  Базовые понятия IPC и синхронизации.md  Базовые понятия. процесс, программа, абстракция ОС, параллелизм.md  Барьеры синхронизации (phase synchronization), ошибки работы с многопоточностью.md  Виды процессов и их планирование.md  Жизненный цикл потоков и базовые примитивы.md  Идентификаторы и дескрипторы, управление процессами.md  Интерактивные системы. Round Robin и приоритеты.md  Категории систем и цели планирования.md  Классическая модель потока.md  Классические алгоритмы синхронизации.md  Мьютексы. идея и реализация.md  Общие сведения об ОС.md  Память, виртуальная память и MMU, шины.md  Параллелизм и планирование, ресурсы потока.md  Планирование процессов, контекст планирования.md  Политика против механизма, user-level потоки.md  Пользователи, UID и GID и модель прав.md  Процессы и переключение контекста и регистры, режимы процессора.md  Создание процессов. UNIX fork и exec и Windows CreateProcess.md  Спинлоки.md  Файловые системы. пути, каталоги, операции.md  ⭐FairRWLock и мониторы.md  ⭐Планирование в системах реального времени.md  ⭐Спинлоки в ядре. IRQ и вытеснение.md
exam/Ответы/Управление памятью/: Backing Store. swap как основа виртуальной памяти.md  TLB и переключение контекста. flush, ASID, PCID, многоуровневые TLB.md  Адресные пространства.md  Алгоритмы Aging и Working Set.md  Алгоритмы Clock и Enhanced Clock.md  Алгоритмы FIFO и Second Chance.md  Алгоритмы LRU и NFU.md  Алгоритмы Optimal Page Replacement и NRU.md  Алгоритмы WSClock и гибридные алгоритмы.md  Алгоритмы выбора «дыры» (First, Next, Best, Worst Fit).md  Виртуальная память в многоядерных системах.md  Защита страниц во время IO, особенности работы DMA.md  Инвертированные таблицы страниц (IPT) и Radix Page Tables. эволюция масштабируемости.md  Основы замещения страниц и цели политики.md  Очистка страниц, выбор размера страницы.md  Память в ранних системах.md  Память как ресурс.md  Переключение адресных пространств, кеши и безопасность.md  Переход от физических адресов к виртуальным.md  Практическая реализация виртуальной памяти.md  Проблема распределения страниц и управление частотой ошибок (PFF), Thrashing.md  Раздельные адресные пространства инструкций и данных (I-space  D-space).md  Разделяемые библиотеки и Memory-mapped files.md  Реакции ОС на нехватку памяти.md  Сегментация + пейджинг.md  Сегментация памяти.md  Управление памятью на основе списков сегментов.md  Управление памятью на практике. базовые понятия и метрики, локальная и глобальная политика распределения страниц.md  Управление памятью с помощью битовых карт.md  Устройство виртуальной памяти.md  Что происходит аппаратно при включении paging. pipeline flush и очистка TLB.md  ⭐Виртуальная память, IO, DMA.md  ⭐Виртуальная память.md  ⭐Защита и релокация, swapping.md
exam/Ответы/Файловые системы и динамические библиотеки/: Проблемы с DLL. Инструменты анализа.md  ⭐Динамические библиотеки, их плюсы и минусы..md  ⭐Управление свободным местом. Дисковые квоты.md
lw1/SimUDuckFunctional/: CMakeLists.txt
lw1/SimUDuckFunctional/lib/Duck/: DecoyDuck.h  Duck.h  MallardDuck.h  ModelDuck.h  RedheadDuck.h  RubberDuck.h
lw1/SimUDuckFunctional/lib/Duck/Dance/: DanceMinuet.h  DanceNoWay.h  DanceWaltz.h  IDanceBehavior.h
lw1/SimUDuckFunctional/lib/Duck/Fly/: FlyNoWay.h  FlyWithWings.h  IFlyBehavior.h  TriggeredQuackFlyBehavior.h
lw1/linux-part-1/: additional.sh  solution.sh
lw1/linux-part-1/proj/: lib.cpp  lib.h  main.cpp
lw1/linux-part-2/: solution.sh
lw1/sys-info-crossplatform/: CMakeLists.txt  SysInfo.cpp  SysInfo.h  SysInfoLinux.cpp  SysInfoWindows.cpp  main.cpp
lw1/sys-info-linux/: CMakeLists.txt  MntentWrapper.cpp  MntentWrapper.h  main.cpp
lw1/sys-info-win/: CMakeLists.txt  main.cpp
lw2/exe-packer/: CMakeLists.txt  ExePacker.cpp  ExePacker.h  main.cpp  prog.cpp
lw2/flip-case/: CMakeLists.txt  input.txt  main.cpp
lw2/list-pocesses-linux/: CMakeLists.txt  main.cpp
lw2/zombie/: CMakeLists.txt  main.cpp
lw3/mt-img-sim/: CMakeLists.txt  main.cpp
lw3/thumbgen/: CMakeLists.txt  main.cpp
lw4/ThreadSafeQueue/: CMakeLists.txt  ThreadSafeQueue.h  main.cpp
lw4/ThreadSafeQueue/benchmarks/: ThreadSafeQueueBenchmark.cpp
lw4/ThreadSafeQueue/tests/: ThreadSafeQueueTest.cpp
lw4/threadpool/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h
lw4/threadpool/benchmarks/: ThreadPoolBenchmark.cpp
lw4/threadpool/tests/: ThreadPoolTest.cpp
lw5/MemoryManager/: CMakeLists.txt
lw5/MemoryManager/include/: MemoryManager.h
lw5/MemoryManager/src/: MemoryManager.cpp
lw5/MemoryManager/tests/: CMakeLists.txt  MemoryManagerTest.cpp
lw5/MemorySimulator/: CMakeLists.txt  OSHandler.cpp  OSHandler.h  PhysicalMemory.cpp  VirtualMemory.cpp  VirtualMemory.h
lw5/MemorySimulator/include/: MyOS.h  OSHandler.h  PhysicalMemory.h  VirtualMemory.h
lw5/MemorySimulator/src/: MyOS.cpp  VirtualMemory.cpp  main.cpp
lw5/MemorySimulator/tests/: CMakeLists.txt  MemorySimulatorTest.cpp
lw7/FileSystem/: CMakeLists.txt
lw7/FileSystem/include/: FileSystemManager.h  MountManager.h  Structure.h
lw7/FileSystem/src/: FileSystemManager.cpp  MountManager.cpp  mkfs.cpp  mount.cpp
lw7/ShowFile/: CMakeLists.txt
lw7/ShowFile/include/: FatStructs.h  FatSystem.h  ImageReader.h
lw7/ShowFile/src/: FatSystem.cpp  ImageReader.cpp  main.cpp
lw8/calc/: CMakeLists.txt  input.txt
lw8/calc/include/: Calculator.h  Client.h  Server.h  SocketHandler.h  TCPSocket.h
lw8/calc/src/: Calculator.cpp  Client.cpp  Server.cpp  TCPSocket.cpp  ThreadPool.cpp  main.cpp
lw8/whiteboard/: CMakeLists.txt
lw8/whiteboard/include/: Client.h  Color.h  DrawData.h  Server.h  Whiteboard.h
lw8/whiteboard/src/: Client.cpp  Server.cpp  Whiteboard.cpp  main.cpp
(+1 files in other folders)
